# a-maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  mazegen_amazeing-1.0.0-py3-none-any.whl  output.txt  pyproject.toml  test.txt
config/: config.txt  default.conf  parser.py
io_helpers/: parser.py  writer.py
maze/: __init__.py  cell.py  generator.py  pattern42.py  solver.py  types.py
maze/algorithms/: base.py  dfs.py  prim.py
output/: writer.py
render/: ascii.py
