[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Maze generator library — generates perfect and imperfect mazes"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["mazegen", "mazegen.algorithms"]

[tool.setuptools.package-dir]
mazegen = "maze"
"mazegen.algorithms" = "maze/algorithms"
