[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen-amazeing"
version = "1.0.0"
description = "Reusable maze generator with DFS/Prim generation and BFS solution."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Nuno Street, Pedro Vicente"}
]

[tool.setuptools.packages.find]
include = ["maze", "maze.*"]
